--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,12 +13,8 @@ dependencies:
 
   cupertino_icons: ^1.0.8
 
-  # Firebase
-  firebase_core: ^3.10.0
-  cloud_firestore: ^5.6.0
-  firebase_auth: ^5.4.0
-  firebase_storage: ^12.3.0
-  firebase_messaging: ^15.2.0
+  # Backend
+  supabase_flutter: ^2.8.0
 
   # State Management
   flutter_riverpod: ^2.6.1
@@ -36,7 +32,6 @@ dependencies:
   # Maps
   flutter_map: ^7.0.0
   latlong2: ^0.9.1
-  geoflutterfire_plus: ^0.0.18
 
   # Local Storage
   hive: ^2.2.3
@@ -56,6 +51,7 @@ dependencies:
   printing: ^5.13.3
   share_plus: ^10.1.3
   intl: ^0.19.0
+  intl_phone_field: ^3.2.0
   path_provider: ^2.1.5
 
 dev_dependencies:
