--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
 
   # Backend
   supabase_flutter: ^2.8.0
+  firebase_core: ^3.11.0
+  firebase_messaging: ^15.3.0
 
   # State Management
   flutter_riverpod: ^2.6.1
