--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,9 @@ dependencies:
   intl_phone_field: ^3.2.0
   path_provider: ^2.1.5
   http: ^1.6.0
+  firebase_core: 3.10.1
+  firebase_messaging: 15.1.3
+  flutter_local_notifications: 17.2.3
 
 dev_dependencies:
   flutter_test:
